fix jdk 17 record tests